<resources>
    <string name="app_name">CEntertainment</string>
    <string name="pictureToolbar">Picture Toolbar</string>
    <string name="class_one_article">Article</string>
    <string name="class_one_video">Video</string>
    <string name="class_one_picture">Picture</string>
    <string name="class_one_personal">Personal</string>
    <string name="SM">test_1</string>
    <string name="hot">♨</string>
    <string name="counter">P</string>
    <string name="tags">〓Tags</string>
    <string name="setting">⎔设置</string>
    <string name="theme">❐主题</string>
    <string name="night_theme">◑夜间</string>
    <string name="loading">loading...</string>
    <string name="like">💝</string>
    <string name="unlike">💔</string>
    <string name="subscribe">📰</string>
    <string name="unsubscribe">📮</string>
    <string name="recommend">〓Recommends</string>
    <string name="lang_flag">langFlag</string>
    <string name="icon_search">➢</string>
    <string name="search_content">search content</string>
    <string name="mail">＠</string>
    <string name="folder">⇩</string>
    <string name="head_blank">☰</string>
    <string name="true_icon">✔</string>
    <string name="string_include">Include</string>
    <string name="string_filter">Filter</string>
    <string name="false_icon">✘</string>
    <string name="string_english">English</string>
    <string name="string_japanese">Japanese</string>
    <string name="string_chinese">Chinese</string>
    <string name="string_language">Language</string>
    <string name="string_find_more">Find More</string>
    <string name="string_mark">Mark</string>
    <string name="string_star">Star</string>
    <string name="string_artists">Artists</string>
    <string name="icon_def">≝</string>
    <string name="icon_round_sign">〄</string>
    <string name="string_save">Save</string>
    <string name="string_reset">Reset</string>
    <string name="string_picture_common_setting">Picture Common Setting</string>
    <string name="icon_lang">あ</string>
    <string name="string_search">Search</string>
    <string name="string_add">Add</string>
    <string name="icon_plus">+</string>
    <string name="import_as_search_mark">import as search mark</string>
    <string name="import_as_search_filter">import as search filter</string>
    <string name="import_as_globe_mark">import as globe mark</string>
    <string name="import_as_globe_filter">import as globe filter</string>
    <string name="string_cn_fan">粉丝</string>
    <string name="string_cn_focus">关注</string>
    <string name="string_cn_thumb_up">获赞</string>
    <string name="string_artist_has_nothing_remained">Artist has nothing remained</string>
    <string name="string_artist_name">Artist Name</string>
    <string name="string_cn_unfocus">取消关注</string>
    <string name="icon_home">⌂</string>
</resources>
