<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/root_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark">

            <LinearLayout
                android:id="@+id/root_toolbar_navigation_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6">
<!---->
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="-20dp"
                    android:gravity="center"
                    android:text="@string/head_blank"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
<!---->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_launcher_foreground" />
            </LinearLayout>
<!---->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:orientation="horizontal">
<!---->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="14"
                    android:background="@drawable/toolbar_search"
                    android:orientation="horizontal">
<!---->
                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/icon_search"
                        android:textColor="@color/colorBackground" />
<!---->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/search_content"
                        android:textColor="@color/colorBackground" />
                </LinearLayout>
<!---->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/folder"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
<!---->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/mail"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
<!---->
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/root_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <!-- 左侧滑动栏 -->
    <RelativeLayout
        android:id="@+id/main_layout_left"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/colorPrimaryDark" />

                <LinearLayout
                    android:id="@+id/root_layout_left_nav_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignTop="@+id/root_layout_left_bottom"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/root_layout_left_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/setting"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/theme"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/night_theme"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
