<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v4.view.ViewPager
                    android:id="@+id/sub_picture_browser"
                    android:layout_width="match_parent"
                    android:layout_height="545dp"
                    android:background="@color/colorBackground" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true">

                        <Button
                            android:id="@+id/sub_picture_button_like"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="18dp"
                            android:layout_marginBottom="259dp"
                            android:background="@drawable/round_button"
                            android:text="@string/unlike"
                            android:textSize="20sp" />


                        <Button
                            android:id="@+id/sub_picture_button_subscribe"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="18dp"
                            android:layout_marginBottom="199dp"
                            android:background="@drawable/round_button"
                            android:text="@string/subscribe"
                            android:textSize="20sp" />

                    </RelativeLayout>
                </RelativeLayout>
            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">

                <com.example.crxzy.centertainment.views.ImageView
                    android:id="@+id/sub_picture_cover"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sub_picture_title"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:padding="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/sub_picture_artists"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:padding="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/gray" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorPrimary"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/tags"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sub_picture_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:textColor="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/gray"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimaryDark">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="4" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="140dp"
                            android:layout_margin="5dp"
                            android:background="@color/white" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="140dp"
                            android:layout_margin="5dp"
                            android:background="@color/white" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="140dp"
                            android:layout_margin="5dp"
                            android:background="@color/white" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="140dp"
                            android:layout_margin="5dp"
                            android:background="@color/white" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="140dp"
                            android:layout_margin="5dp"
                            android:background="@color/white" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>